add login modal

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
   <div id="root">
     Loading
   </div>
+  <div id="modal-registry"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
